# banksystem

./: CMakeLists.txt  CMakePresets.json  banksystem.cpp  banksystem.h  clear_console.cpp  clear_console.h  menu.cpp  show_menu.cpp  show_menu.h
menu_components/: register.cpp  register.h
